<resources>
    <string name="app_name">Sanitas</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="tc_id">TC-ID</string>
    <string name="log_n">Logın</string>
    <string name="have_already_account_log_in">Have Already Account? Log In</string>
    <string name="e_mail">E-Mail</string>
    <string name="verify_password">Verify Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_medicament_fragment">Hello Medicaments fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userinfo">UserInfo</string>
    <string name="user_information">User Information</string>
    <string name="my_information">My Information</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="tc_id2">TC-ID</string>
    <string name="phone_number">Phone Number:</string>
    <string name="e_mail2">E-Mail:</string>
    <string name="tc_id3">TC-ID:</string>
    <string name="specialty">Specialty:</string>
    <string name="tc">TC</string>
    <string name="name5">Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="n_a">N/A</string>
    <string name="gender">Gender:</string>
    <string name="edit_profile">EDIT PROFILE</string>
</resources>